# atemcproto

./: CMakeLists.txt
modules/ast/: ast.cpp  decl.cpp  expr.cpp  literal_expr.cpp  printer.cpp  type.cpp  utils.cpp
modules/main/: main.cpp
modules/parser/: grammar.cpp
test/: parser_test.atem
